WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210872
Edge use kind asserts are wrong for BigInt32 on ValueBitLShift
https://bugs.webkit.org/show_bug.cgi?id=210872
Summary
Edge use kind asserts are wrong for BigInt32 on ValueBitLShift
Saam Barati
Reported
2020-04-22 13:23:22 PDT
...
Attachments
patch
(2.90 KB, patch)
2020-04-22 13:27 PDT
,
Saam Barati
ysuzuki
: review+
Details
Formatted Diff
Diff
patch for landing
(2.93 KB, patch)
2020-04-22 13:34 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-04-22 13:27:19 PDT
Created
attachment 397246
[details]
patch
Yusuke Suzuki
Comment 2
2020-04-22 13:28:30 PDT
Comment on
attachment 397246
[details]
patch r=me
Mark Lam
Comment 3
2020-04-22 13:29:35 PDT
Comment on
attachment 397246
[details]
patch r=me too.
Robin Morisset
Comment 4
2020-04-22 13:30:32 PDT
Comment on
attachment 397246
[details]
patch r=me
Saam Barati
Comment 5
2020-04-22 13:34:58 PDT
Created
attachment 397248
[details]
patch for landing
EWS
Comment 6
2020-04-22 19:14:26 PDT
Committed
r260549
: <
https://trac.webkit.org/changeset/260549
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397248
[details]
.
Radar WebKit Bug Importer
Comment 7
2020-04-22 19:15:18 PDT
<
rdar://problem/62227208
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug