Edge use kind asserts are wrong for BigInt32 on ValueBitLShift https://bugs.webkit.org/show_bug.cgi?id=210872

Reviewed by Yusuke Suzuki, Mark Lam, and Robin Morisset.

This is already covered by the v8 tests Yusuke checked in.

* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::emitUntypedOrAnyBigIntBitOp):
* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileValueBitLShift):
(JSC::FTL::DFG::LowerDFGToB3::emitBinaryBitOpSnippet):


Canonical link: https://commits.webkit.org/223776@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260549 268f45cc-cd09-0410-ab3c-d52691b4dbfc